--- a/roles/defaults/vars/main.yml
+++ b/roles/defaults/vars/main.yml
@@ -188,8 +188,8 @@ _atmosphere_images:
   octavia_housekeeping: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/octavia:{{ atmosphere_release }}"
   octavia_worker: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/octavia:{{ atmosphere_release }}"
   openstack_cli: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/python-openstackclient:{{ atmosphere_release }}"
-  openvswitch_db_server: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/openvswitch:{{ atmosphere_release }}"
-  openvswitch_vswitchd: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/openvswitch:{{ atmosphere_release }}"
+  openvswitch_db_server: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-3"
+  openvswitch_vswitchd: "{{ atmosphere_image_prefix }}ghcr.io/vexxhost/openvswitch:v3.3.6-3"
   ovn_bgp_agent: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-bgp-agent:{{ atmosphere_release }}"
   ovn_controller: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-host:{{ atmosphere_release }}"
   ovn_controller_kubectl: "{{ atmosphere_image_prefix }}registry.atmosphere.dev/library/ovn-host:{{ atmosphere_release }}"
