fix: update OctaviaAmphoraNotOperational alert to accept DELETED status
Change-Id: Ia6dd6272537a8e705313758ffdf03514426ca287
Signed-off-by: Dong Ma <dong.ma@vexxhost.com>

--- a/roles/kube_prometheus_stack/files/jsonnet/tests.yml
+++ b/roles/kube_prometheus_stack/files/jsonnet/tests.yml
@@ -247,6 +247,8 @@ tests:
         values: '2x60'
       - series: 'openstack_loadbalancer_amphora_status{cert_expiration="2020-08-08T23:44:30Z",compute_id="9cd0f9a2-fe12-42fc-a7e3-5b6fbbe20395",ha_ip="10.0.0.6",id="7f890893-ced0-46ed-8697-33415d070e5a",lb_network_ip="192.168.0.17",loadbalancer_id="882f2a9d-9d53-4bd0-b0e9-08e9d0de11f9",role="BACKUP",status="ALLOCATED"}'
         values: '3x60'
+      - series: 'openstack_loadbalancer_amphora_status{cert_expiration="2020-08-08T23:44:32Z",compute_id="b9c0f9a2-fe12-42fc-a7e3-5b6fbbe20397",ha_ip="10.0.0.6",id="e9e8ccf3-8249-4f7e-b58c-52ef864a4a13",lb_network_ip="192.168.0.18",loadbalancer_id="882f2a9d-9d53-4bd0-b0e9-08e9d0de11f9",role="BACKUP",status="DELETED"}'
+        values: '3x60'
     alert_rule_test:
       - eval_time: 1h
         alertname: OctaviaAmphoraNotOperational
