--- a/roles/heat/vars/main.yml
+++ b/roles/heat/vars/main.yml
@@ -52,6 +52,15 @@ _heat_helm_values:
         workers: 8
       oslo_messaging_notifications:
         driver: noop
+    rabbitmq:
+      policies:
+        - vhost: "heat"
+          name: "atmosphere"
+          definition:
+            message-ttl: 70000
+          priority: 0
+          apply-to: all
+          pattern: '^(?!(amq\.|reply_)).*'
   manifests:
     ingress_api: false
     ingress_cfn: false
