--- a/roles/cinder/vars/main.yml
+++ b/roles/cinder/vars/main.yml
@@ -65,7 +65,7 @@ __cinder_helm_values:
     rabbitmq:
       policies:
         - vhost: "cinder"
-          name: "atmosphere"
+          name: "ha_ttl_cinder"
           definition:
             message-ttl: 70000
           priority: 0
