--- a/roles/glance/vars/main.yml
+++ b/roles/glance/vars/main.yml
@@ -57,7 +57,7 @@ _glance_helm_values:
     rabbitmq:
       policies:
         - vhost: "glance"
-          name: "atmosphere"
+          name: "ha_ttl_glance"
           definition:
             message-ttl: 70000
           priority: 0
