--- a/roles/heat/vars/main.yml
+++ b/roles/heat/vars/main.yml
@@ -55,7 +55,7 @@ _heat_helm_values:
     rabbitmq:
       policies:
         - vhost: "heat"
-          name: "atmosphere"
+          name: "ha_ttl_heat"
           definition:
             message-ttl: 70000
           priority: 0
