--- a/roles/keystone/vars/main.yml
+++ b/roles/keystone/vars/main.yml
@@ -104,7 +104,7 @@ _keystone_helm_values:
     rabbitmq:
       policies:
         - vhost: "keystone"
-          name: "atmosphere"
+          name: "ha_ttl_keystone"
           definition:
             message-ttl: 70000
           priority: 0
