--- a/roles/neutron/vars/main.yml
+++ b/roles/neutron/vars/main.yml
@@ -94,7 +94,7 @@ __neutron_helm_values:
     rabbitmq:
       policies:
         - vhost: "neutron"
-          name: "atmosphere"
+          name: "ha_ttl_neutron"
           definition:
             message-ttl: 70000
           priority: 0
