--- a/roles/nova/vars/main.yml
+++ b/roles/nova/vars/main.yml
@@ -139,7 +139,7 @@ _nova_helm_values:
     rabbitmq:
       policies:
         - vhost: "nova"
-          name: "atmosphere"
+          name: "ha_ttl_nova"
           definition:
             message-ttl: 70000
           priority: 0
