--- a/roles/octavia/vars/main.yml
+++ b/roles/octavia/vars/main.yml
@@ -180,7 +180,7 @@ _octavia_helm_values:
     rabbitmq:
       policies:
         - vhost: "octavia"
-          name: "atmosphere"
+          name: "ha_ttl_octavia"
           definition:
             message-ttl: 70000
           priority: 0
