--- a/roles/horizon/vars/main.yml
+++ b/roles/horizon/vars/main.yml
@@ -62,6 +62,15 @@ _horizon_helm_values:
         - monitoring
         - neutron_vpnaas_dashboard
         - octavia_dashboard
+    rabbitmq:
+      policies:
+        - vhost: "horizon"
+          name: "ha_ttl_horizon"
+          definition:
+            message-ttl: 70000
+          priority: 0
+          apply-to: all
+          pattern: '^(?!(amq\.|reply_)).*'
   manifests:
     ingress_api: false
     service_ingress_api: false
