--- a/roles/cinder/vars/main.yml
+++ b/roles/cinder/vars/main.yml
@@ -62,6 +62,15 @@ __cinder_helm_values:
         driver: noop
       privsep_osbrick:
         helper_command: sudo cinder-rootwrap /etc/cinder/rootwrap.conf privsep-helper --config-file /etc/cinder/cinder.conf
+    rabbitmq:
+      policies:
+        - vhost: "cinder"
+          name: "ha_ttl_cinder"
+          definition:
+            message-ttl: 70000
+          priority: 0
+          apply-to: all
+          pattern: '^(?!(amq\.|reply_)).*'
   manifests:
     ingress_api: false
     job_clean: false
