--- a/charts/libvirt/values.yaml
+++ b/charts/libvirt/values.yaml
@@ -28,7 +28,7 @@ images:
   tags:
     libvirt: docker.io/openstackhelm/libvirt:latest-ubuntu_focal
     libvirt_tls_sidecar: ghcr.io/vexxhost/atmosphere/libvirt-tls-sidecar:latest
-    libvirt_exporter: ghcr.io/inovex/prometheus-libvirt-exporter:2.2.0
+    libvirt_exporter: vexxhost/libvirtd-exporter:latest
     ceph_config_helper: 'docker.io/openstackhelm/ceph-config-helper:ubuntu_jammy_19.2.3-1-20250805'
     dep_check: quay.io/airshipit/kubernetes-entrypoint:latest-ubuntu_focal
     image_repo_sync: docker.io/library/docker:17.07.0
@@ -78,7 +78,7 @@ endpoints:
   libvirt_exporter:
     port:
       metrics:
-        default: 9177
+        default: 9474
 
 network_policy:
   libvirt:
@@ -268,8 +268,7 @@ pod:
     libvirt_exporter:
       enabled: false
       args:
-        - "--libvirt.uri"
-        - "/run/libvirt/libvirt-sock-ro"
+        - "--libvirt.nova"
 
   affinity:
     anti:
