--- a/images/heat/Dockerfile
+++ b/images/heat/Dockerfile
@@ -1,10 +1,10 @@
 # SPDX-FileCopyrightText: © 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: GPL-3.0-or-later
-# Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
+# Atmosphere-Rebuild-Time: 2025-10-14T10:18:12Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/heat repo=https://github.com/openstack/heat.git branch=master
-ARG HEAT_GIT_REF=7ffb5dd3c2d76299479d5b55041a021458e5f056
+# renovate: name=openstack/heat repo=https://github.com/openstack/heat.git branch=stable/2025.2
+ARG HEAT_GIT_REF=c0eb453520be1b382d98cdd537adecaf8f9f48d9
 ADD --keep-git-dir=true https://github.com/openstack/heat.git#${HEAT_GIT_REF} /src/heat
 RUN git -C /src/heat fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
