--- a/images/ironic/Dockerfile
+++ b/images/ironic/Dockerfile
@@ -1,10 +1,10 @@
 # SPDX-FileCopyrightText: © 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: GPL-3.0-or-later
-# Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
+# Atmosphere-Rebuild-Time: 2025-10-14T10:18:12Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/ironic repo=https://github.com/openstack/ironic.git branch=master
-ARG IRONIC_GIT_REF=5b2dd69ae16cb3c18c6d21c73e7ad716f078e50e
+# renovate: name=openstack/ironic repo=https://github.com/openstack/ironic.git branch=stable/2025.2
+ARG IRONIC_GIT_REF=44b61caf549827a208d5d593687c275e5add5eee
 ADD --keep-git-dir=true https://github.com/openstack/ironic.git#${IRONIC_GIT_REF} /src/ironic
 RUN git -C /src/ironic fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
