--- a/images/octavia/Dockerfile
+++ b/images/octavia/Dockerfile
@@ -1,14 +1,14 @@
 # SPDX-FileCopyrightText: © 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: GPL-3.0-or-later
-# Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
+# Atmosphere-Rebuild-Time: 2025-10-14T10:18:12Z
 
 FROM openstack-venv-builder AS build
-# renovate: name=openstack/octavia repo=https://github.com/openstack/octavia.git branch=master
-ARG OCTAVIA_GIT_REF=f6a639bb44127d9ba76b8c1cc72a4f16d75aeb6f
+# renovate: name=openstack/octavia repo=https://github.com/openstack/octavia.git branch=stable/2025.2
+ARG OCTAVIA_GIT_REF=fa44598bd8e410222a2c47b08196a2af3012fbfa
 ADD --keep-git-dir=true https://github.com/openstack/octavia.git#${OCTAVIA_GIT_REF} /src/octavia
 RUN git -C /src/octavia fetch --unshallow
-# renovate: name=openstack/ovn-octavia-provider repo=https://github.com/openstack/ovn-octavia-provider.git branch=master
-ARG OVN_OCTAVIA_PROVIDER_GIT_REF=df5a9804598efb4af9f7103b604a6988d0aeb004
+# renovate: name=openstack/ovn-octavia-provider repo=https://github.com/openstack/ovn-octavia-provider.git branch=stable/2025.2
+ARG OVN_OCTAVIA_PROVIDER_GIT_REF=345a8dee51f58360a707bd854ebe92019779980d
 ADD --keep-git-dir=true https://github.com/openstack/ovn-octavia-provider.git#${OVN_OCTAVIA_PROVIDER_GIT_REF} /src/ovn-octavia-provider
 RUN git -C /src/ovn-octavia-provider fetch --unshallow
 RUN --mount=type=cache,target=/root/.cache/uv <<EOF bash -xe
