--- a/images/openstack-venv-builder/Dockerfile
+++ b/images/openstack-venv-builder/Dockerfile
@@ -1,10 +1,10 @@
 # SPDX-FileCopyrightText: © 2025 VEXXHOST, Inc.
 # SPDX-License-Identifier: GPL-3.0-or-later
-# Atmosphere-Rebuild-Time: 2024-06-25T22:49:25Z
+# Atmosphere-Rebuild-Time: 2025-10-14T10:18:12Z
 
 FROM ubuntu-cloud-archive AS requirements
-# renovate: name=openstack/requirements repo=https://github.com/openstack/requirements.git branch=master
-ARG REQUIREMENTS_GIT_REF=d953bdbff8c1357447e53e4230e88949745fa395
+# renovate: name=openstack/requirements repo=https://github.com/openstack/requirements.git branch=stable/2025.2
+ARG REQUIREMENTS_GIT_REF=d5d07bfb45c6ba78005ca24136059d9d05792220
 ADD --keep-git-dir=true https://github.com/openstack/requirements.git#${REQUIREMENTS_GIT_REF} /src/requirements
 RUN cp /src/requirements/upper-constraints.txt /upper-constraints.txt
 RUN <<EOF sh -xe
