--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
   "ansible-core>=2.15.9",
   "docker-image-py>=0.1.12",
   "jmespath>=1.0.1",
+  "mitogen==0.3.29",
   "netaddr>=0.8.0",
   "openstacksdk>1",
   "rjsonnet>=0.5.2",
