use customized kubernetes collection
Signed-off-by: Tadas Sutkaitis <tadas.sutkaitis@vexxhost.com>

--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -14,6 +14,8 @@
 
 dependency:
   name: galaxy
+  options:
+    requirements-file: molecule/aio/requirements-poc.yaml
 driver:
   name: default
   options:
@@ -35,6 +37,7 @@ provisioner:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
       strategy: serverscom.mitogen.mitogen_linear
+      roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
   options:
