--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -36,7 +36,7 @@ provisioner:
   config_options:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
-      # strategy: serverscom.mitogen.mitogen_linear
+      strategy: serverscom.mitogen.mitogen_linear
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
