--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -22,7 +22,7 @@ driver:
     managed: False
     ansible_connection_options:
       ansible_become: "true"
-      ansible_connection: local
+      ansible_connection: ansible.builtin.local
 platforms:
   - name: instance
     groups:
