--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,6 +100,12 @@ jobs:
           - local-path-provisioner
           - rbd
     steps:
+      - name: Setup SSH for localhost
+        run: |
+          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
+          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
+          sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/molecule
         with:
@@ -113,6 +119,12 @@ jobs:
       group: ${{ github.job }}-${{ github.event.pull_request.number }}
       cancel-in-progress: true
     steps:
+      - name: Setup SSH for localhost
+        run: |
+          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
+          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
+          sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/molecule
         with:
@@ -136,6 +148,12 @@ jobs:
           - openvswitch
           - ovn
     steps:
+      - name: Setup SSH for localhost
+        run: |
+          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
+          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
+          sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - uses: ./.github/actions/molecule
         with:
