--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -25,6 +25,7 @@ driver:
       ansible_connection: ansible.builtin.ssh
 platforms:
   - name: instance
+    hostname: 127.0.0.1
     groups:
       - controllers
       - cephs
