--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -25,7 +25,6 @@ driver:
       ansible_connection: ansible.builtin.ssh
 platforms:
   - name: instance
-    hostname: 127.0.0.1
     groups:
       - controllers
       - cephs
@@ -46,9 +45,9 @@ provisioner:
   inventory:
     host_vars:
       instance:
-        ansible_connection: ssh
         ansible_host: 127.0.0.1
         ansible_user: "{{ lookup('env', 'USER') }}"
+        ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
     links:
       # host_vars: "${ATMOSPHERE_ANSIBLE_VARS_PATH-$MOLECULE_SCENARIO_DIRECTORY}/host_vars"
       group_vars: "${ATMOSPHERE_ANSIBLE_VARS_PATH-$MOLECULE_SCENARIO_DIRECTORY}/group_vars"
