--- a/molecule/aio/host_vars/instance.yml
+++ b/molecule/aio/host_vars/instance.yml
@@ -1,2 +1,3 @@
 ansible_host: 127.0.0.1
 ansible_user: "{{ lookup('env', 'USER') }}"
+ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ~/.ssh/id_rsa'
