--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,8 +102,8 @@ jobs:
     steps:
       - name: Setup SSH for localhost
         run: |
-          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
-          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
+          cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -121,8 +121,8 @@ jobs:
     steps:
       - name: Setup SSH for localhost
         run: |
-          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
-          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
+          cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -150,8 +150,8 @@ jobs:
     steps:
       - name: Setup SSH for localhost
         run: |
-          ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
-          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
+          cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
