--- a/molecule/aio/host_vars/instance.yml
+++ b/molecule/aio/host_vars/instance.yml
@@ -1,6 +1,6 @@
 ansible_host: 127.0.0.1
-ansible_user: "{{ lookup('env', 'USER') }}"
+#ansible_user: "{{ lookup('env', 'USER') }}"
 # ansible_user: ubuntu
-ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+ansible_ssh_common_args: '-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ~/.ssh/id_ed25519'
 # ansible_ssh_private_key_file: /home/ubuntu/.ssh/id_ed25519
-ansible_ssh_private_key_file: "/home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519"
+#ansible_ssh_private_key_file: "/home/{{ ansible_user }}/.ssh/id_ed25519"
