--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,6 +104,7 @@ jobs:
         run: |
           ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
           cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -123,6 +124,7 @@ jobs:
         run: |
           ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
           cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -152,6 +154,7 @@ jobs:
         run: |
           ssh-keygen -t ed25519 -f ~/.ssh/id_ed25519 -N ""
           cat ~/.ssh/id_ed25519.pub >> ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/authorized_keys
           sudo systemctl restart ssh || sudo apt-get install -y openssh-server
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
