--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -37,6 +37,9 @@ provisioner:
       callbacks_enabled: ansible.posix.profile_tasks
       strategy: serverscom.mitogen.mitogen_linear
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
+    ssh_connection:
+      ssh_args: "-o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey"
+      pipelining: true
     tags:
       run: ${ATMOSPHERE_ANSIBLE_TAGS-all}
   options:
