--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ molecule/*/group_vars/all/*
 !molecule/*/group_vars/all/molecule.yml
 molecule/*/host_vars/*
 !molecule/*/host_vars/.gitkeep
-!molecule/*/host_vars/instance.yml
+# !molecule/*/host_vars/instance.yml
 
 ## Misc
 *.tar.gz
