--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -28,6 +28,14 @@
         - group_vars/computes
         - host_vars
 
+    - name: Create host_vars for localhost
+      ansible.builtin.copy:
+        content: |
+          ansible_host: 127.0.0.1
+          ansible_user: "{{ lookup('env', 'USER') }}"
+          ansible_ssh_private_key_file: "/home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519"
+        dest: "{{ workspace_path }}/host_vars/instance.yml"
+
 - name: Generate Ceph control plane configuration for workspace
   hosts: localhost
   gather_facts: false
