--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -28,13 +28,13 @@
         - group_vars/computes
         - host_vars
 
-    - name: Create host_vars for localhost
+    - name: Create host_vars for test instance
       ansible.builtin.copy:
+        dest: "{{ workspace_path }}/host_vars/instance.yml"
         content: |
           ansible_host: 127.0.0.1
-          ansible_user: "{{ lookup('env', 'USER') }}"
-          ansible_ssh_private_key_file: "/home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519"
-        dest: "{{ workspace_path }}/host_vars/instance.yml"
+          ansible_user: {{ lookup('env', 'USER') }}
+          ansible_ssh_private_key_file: /home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519
 
 - name: Generate Ceph control plane configuration for workspace
   hosts: localhost
