--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -14,7 +14,7 @@
 
 - name: Generate workspace for Atmosphere
   hosts: localhost
-  gather_facts: false
+  gather_facts: true
   tasks:
     - name: Create folders for workspace
       ansible.builtin.file:
