--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -20,8 +20,8 @@ driver:
   name: default
   options:
     managed: False
-    # ansible_connection_options:
-    #   ansible_become: "true"
+    ansible_connection_options:
+      ansible_become: "true"
 platforms:
   - name: instance
     groups:
