--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -35,6 +35,10 @@
           ansible_host: 127.0.0.1
           ansible_user: {{ lookup('env', 'USER') }}
           ansible_ssh_private_key_file: /home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519
+      register: test_instance
+    
+    - debug:
+        msg: "{{ test_instance }}"
 
 - name: Generate Ceph control plane configuration for workspace
   hosts: localhost
