--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -35,10 +35,19 @@
           ansible_host: 127.0.0.1
           ansible_user: {{ lookup('env', 'USER') }}
           ansible_ssh_private_key_file: /home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519
-      register: test_instance
-    
-    - debug:
-        msg: "{{ test_instance }}"
+
+    - name: Evaluate and render the content
+      set_fact:
+        rendered_instance_vars: "{{ instance_vars | template }}"
+      vars:
+        instance_vars: |
+          ansible_host: 127.0.0.1
+          ansible_user: {{ lookup('env', 'USER') }}
+          ansible_ssh_private_key_file: /home/{{ lookup('env', 'USER') }}/.ssh/id_ed25519
+
+    - name: Print rendered content (for debugging)
+      debug:
+        msg: "{{ rendered_instance_vars }}"
 
 - name: Generate Ceph control plane configuration for workspace
   hosts: localhost
