--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -38,7 +38,7 @@
 
     - name: Evaluate and render the content
       set_fact:
-        rendered_instance_vars: "{{ instance_vars | template }}"
+        rendered_instance_vars: "{{ instance_vars }}"
       vars:
         instance_vars: |
           ansible_host: 127.0.0.1
