--- a/roles/rabbitmq_cluster_operator/tasks/main.yml
+++ b/roles/rabbitmq_cluster_operator/tasks/main.yml
@@ -22,6 +22,7 @@
     server_side_apply:
       field_manager: atmosphere
       force_conflicts: true
+    kubeconfig: "{{ rabbitmq_cluster_operator_helm_kubeconfig }}"
   loop:
     - messaging-topology-operator
     - rabbitmq-cluster
