--- a/molecule/aio/molecule.yml
+++ b/molecule/aio/molecule.yml
@@ -35,7 +35,7 @@ provisioner:
   config_options:
     defaults:
       callbacks_enabled: ansible.posix.profile_tasks
-      strategy: serverscom.mitogen.mitogen_linear
+      # strategy: serverscom.mitogen.mitogen_linear
       roles_path: "/root/.ansible/collections/ansible_collections/vexxhost/atmosphere/roles"
       host_key_checking: false
     ssh_connection:
