--- a/playbooks/csi.yml
+++ b/playbooks/csi.yml
@@ -13,6 +13,7 @@
 # under the License.
 
 - hosts: controllers
+  strategy: "{{ atmosphere_custom_ansible_strategy | default('ansible.builtin.linear') }}"
   become: true
   roles:
     - role: csi
