--- a/playbooks/generate_workspace.yml
+++ b/playbooks/generate_workspace.yml
@@ -41,6 +41,14 @@
           ansible_user: {{ username_result.stdout }}
           ansible_ssh_private_key_file: /home/{{ username_result.stdout }}/.ssh/id_ed25519
 
+    - name: Create group_vars for ansible strategy
+      ansible.builtin.copy:
+        dest: "{{ workspace_path }}/group_vars/all/ansible_strategy.yml"
+        content: |
+          atmosphere_custom_ansible_strategy: serverscom.mitogen.mitogen_linear
+          ceph_custom_ansible_strategy: serverscom.mitogen.mitogen_linear
+          kubernetes_custom_ansible_strategy: serverscom.mitogen.mitogen_linear
+
 - name: Generate Ceph control plane configuration for workspace
   hosts: localhost
   gather_facts: false
